Changes in CSS to fix involuntary scrolling issue on smaller screens.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
 }
 
 html, body {
-    height: 100%;
+    height: 90%;
     margin: 0;
     justify-content: center;
     align-items: center;
@@ -150,4 +150,24 @@ h1 {
 .display-victory {
     font-family: 'Play', sans-serif;
     display: flex;
+}
+
+@media (max-width: 600px) {
+    .cell {
+        width: 60px;
+        height: 60px;
+    }
+
+    h1 {
+        font-size: 1.5rem;
+    }
+
+    .victory-msg {
+        font-size: 2rem;
+    }
+
+    .btn {
+        font-size: 1.5rem;
+        padding: 5px 10px;
+    }
 }
